Background image bug on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ button,
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: auto;
+  background-size: cover;
   background-color: black;
 }
 
